[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
hyper = "1.9.0"
rustls = "0.23.39"
slatedb = "0.12.1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["rt"] }
libc = "0.2"
wasmtime = "44.0.0"
wasmtime-wasi = "44.0.0"
